# cprs

./: Cargo.toml  install.py  readme.md
algo/src/: lib.rs
algo/src/graph/: base.rs  bridge.rs  dsu.rs  mod.rs  scc.rs
algo/src/io/: reader.rs  writer.rs
algo/src/misc/: mod.rs  recursive_closure.rs  two_sat.rs
algo/src/string/: z.rs
contests/codeforces/codeforces_round_942_div_1/b2_reverse_card_hard_version/: Cargo.toml  task_desc.json
contests/codeforces/codeforces_round_943_div_3/g2_division_lcp_hard_version/: Cargo.toml  task_desc.json
contests/codeforces/codeforces_round_944_div_4/h1/: Cargo.toml  task_desc.json
contests/codeforces/codeforces_round_954_div_3/f_non_academic_problem/: Cargo.toml  task_desc.json
contests/codeforces/codeforces_round_973_div_2/a_zhans_blender/: Cargo.toml  task_desc.json
contests/codeforces/codeforces_round_973_div_2/e_prefix_gcd/: Cargo.toml  (+1 more)
contests/library_checker/sat/: Cargo.toml  task_desc.json
contests/library_checker/strongly_connected_components/: Cargo.toml  task_desc.json
contests/library_checker/unionfind/: Cargo.toml  task_desc.json
contests/library_checker/z_algorithm/: Cargo.toml  task_desc.json
cprs_cli/: Cargo.toml
cprs_cli/src/: clipboard.rs  config.rs  history.rs  lib.rs  listener.rs  main.rs  submitter.rs  task.rs  template.rs
cprs_cli/src/cli/: build.rs  cd.rs  cmd.rs  init.rs  list.rs  listen.rs  mod.rs  setup.rs  submit.rs
src/: cli.rs  config.rs  history.rs  lib.rs  listener.rs  main.rs  task.rs  utils.rs
src/cli/: list.rs  mod.rs
templates/: template_Cargo.toml  template_main.rs
(+58 files in other folders)
