[package]
name = "cprs_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
cargo_metadata = "0.18.1"
clap = { version = "4.5.17", features = ["derive"] }
confy = "0.6.1"
crossterm = "0.28.1"
dirs = "5.0.1"
heck = "0.5.0"
log = "0.4.22"
minijinja = { version = "2.2.0", features = ["loader"] }
pathdiff = "0.2.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
syn = { version = "2.0.77", features = ["full", "parsing"] }
tokio = { version = "1.40.0", features = [
  "fs",
  "full",
  "io-util",
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
  "sync",
] }
walkdir = "2.5.0"
